--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
-body {
+:root {
+  --main-bg-color: #fff; 
+}
+
+* {
   margin: 0;
   padding: 0; 
   box-sizing: border-box; 
+  background-color: #18a8b2; 
 }
 
